Fix: Added button to show the menu on mobile. (#341)

--- a/easyfinance.client/src/app/core/components/nav-bar/nav-bar.component.css
+++ b/easyfinance.client/src/app/core/components/nav-bar/nav-bar.component.css
@@ -1,7 +1,3 @@
 .dropdown-menu {
   z-index: 1001;
 }
-
-.dropdown-toggle {
-  background-color: #f3f3f3;
-}
